force-app/main/default/objects/P_C_Carrier_Data__c/P_C_Carrier_Data__c.object-meta.xml
<CustomObject>
    <description>each carrier/Line of Business instance quoted thru Huckleberry</description>
    <label>P&amp;C Carrier Data</label>
    <nameField>
        <displayFormat>PC Carrier Data-{0000}</displayFormat>
        <label>P&amp;C Carrier Data</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>P&amp;C Carrier Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>