force-app/main/default/objects/P_C_Carrier_Data__c/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Line of Business</label>
    <length>40</length>
    <type>Text</type>
</CustomField>