force-app/main/default/objects/P_C_Carrier_Data__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>P&amp;C Carrier Data</relationshipLabel>
    <relationshipName>P_C_Carrier_Data</relationshipName>
    <type>Lookup</type>
</CustomField>