force-app/main/default/objects/P_C_Carrier_Data__c/fields/P_C_Quote_Data__c.field-meta.xml
<CustomField>
    <fullName>P_C_Quote_Data__c</fullName>
    <label>P&amp;C Quote Data</label>
    <referenceTo>PC_Quote_Data__c</referenceTo>
    <relationshipLabel>P&amp;C Carrier Data</relationshipLabel>
    <relationshipName>P_C_Carrier_Data</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>