force-app/main/default/objects/P_C_Carrier_Data__c/fields/Policy_Bind_Date__c.field-meta.xml
<CustomField>
    <fullName>Policy_Bind_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Policy Bind Date</label>
    <type>DateTime</type>
</CustomField>