force-app/main/default/objects/P_C_Carrier_Data__c/fields/Policy_Carrier_ID__c.field-meta.xml
<CustomField>
    <fullName>Policy_Carrier_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Policy Carrier ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>