force-app/main/default/objects/P_C_Carrier_Data__c/fields/Quote_Carrier_ID__c.field-meta.xml
<CustomField>
    <fullName>Quote_Carrier_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Quote Carrier ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>