force-app/main/default/objects/P_C_Carrier_Data__c/fields/Quote_Premium__c.field-meta.xml
<CustomField>
    <fullName>Quote_Premium__c</fullName>
    <label>Quote Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>