force-app/main/default/objects/P_C_Carrier_Data__c/fields/Quote_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Quote_Request_ID__c</fullName>
    <description>Huckleberry ID</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Huckleberry ID</inlineHelpText>
    <label>Quote Request ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>