force-app/main/default/objects/P_C_Carrier_Data__c/fields/Quote_Status__c.field-meta.xml
<CustomField>
    <fullName>Quote_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Quote Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>